# ats-linter

./: .clean.sh  .codecov.yml  .codespell-ignore  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  LICENSE.txt  README.rst  environment.yaml  environment.yml  project_cleaner.py  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.githooks.d/: install_deps  pre-commit.50.tox  pre-commit_environment.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
conda-recipe/: meta.yaml
conda_envs/: clean_env.yml  conda_build_env.yml  dev_env.yml  docs_env.yml  pypi_build_env.yml  tests_env.yml
docs/: Makefile  conf.py  index.rst  requirements.txt
integration_test/: Dockerfile  README.md  run_test.sh
integration_test/test_repo/: .pre-commit-config.yaml  .pre-commit-hooks.yaml  test_real_case.py  test_sample_bad.py  test_sample_good.py  test_template_integration.py
src/ats_linter/: __init__.py  ast_test_module_factory.py  async_ast_parser.py  cli.py  data_classes.py  description.py  exception.py  file_collector.py  linter.py  parallel_process.py  test_description.py
src/project_cleaner/: project_cleaner.py
tests/: conftest.py  pytest.ini  test_ast_test_module_factory.py  test_async_ast_parser.py  test_async_ast_parser_cov.py  test_cli.py  test_data_classes.py  test_description.py  test_exception.py  test_file_collector.py  test_linter.py  test_parallel_process.py  test_section.py  test_template1.py
tests/e2e/: conftest.py  test_e2e_cli_options.py  test_e2e_compliant_schemas.py  test_e2e_directory_scanning.py  test_e2e_linting.py  test_e2e_schema_violations.py
