[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61",
  "setuptools_scm[toml]>=6.2",
]

[tool.setuptools_scm]
version_scheme = "post-release"

[project]
name = "ats-linter"
description = "Automated test schema linter"
authors = [
    {name = "Aydin Abdi", email = "ayd.abd@gmail.com"},
]
requires-python = ">=3.11"
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE", "LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Utilities",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "loguru",
]
dynamic = [
    "version",
]
keywords = ["automation", "test", "lint", "ats-linter", "pytest", "unittest"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "pre-commit",
]

[project.urls]
Documentation = "https://ats-linter.readthedocs.io"
Download = "https://pypi.python.org/pypi/ats-linter"
Repository = "https://github.com/aydabd/ats-linter"

[project.scripts]
ats-linter = "ats_linter.cli:run"

[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = '\.pyi?$'

exclude = '''
(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.gpg
  | tests
)
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=ats_linter -vv --ignore=test_template1.py"
log_file = "output/pytest_output.log"
log_cli = true
log_cli_level = "INFO"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s %(levelname)s: %(message)s"
asyncio_mode = "auto"
